k8/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: charts.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 8080
